[gd_scene load_steps=3 format=3 uid="uid://b6wslvveu0xe0"]

[ext_resource type="Script" path="res://TugOfWar.gd" id="1_6arac"]
[ext_resource type="PackedScene" uid="uid://biuk5osvyryv7" path="res://TugOfWarTeam.tscn" id="1_rqy3e"]

[node name="Control" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6arac")

[node name="TitleContainer" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "NEW TUG OF WAR NAME
"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Close"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="VisualisationOptions" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label2" type="Label" parent="VisualisationOptions"]
layout_mode = 2
text = "Window Size:"

[node name="WindowWidthInput" type="SpinBox" parent="VisualisationOptions"]
layout_mode = 2
min_value = 100.0
max_value = 1200.0
value = 600.0
rounded = true
allow_greater = true

[node name="Label" type="Label" parent="VisualisationOptions"]
layout_mode = 2
text = "x"

[node name="WindowHeightInput" type="SpinBox" parent="VisualisationOptions"]
layout_mode = 2
min_value = 100.0
max_value = 1200.0
value = 200.0
rounded = true
allow_greater = true

[node name="OptionButton" type="OptionButton" parent="VisualisationOptions"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "Dueling Beams"
popup/item_0/id = 0

[node name="VSeparator" type="VSeparator" parent="VisualisationOptions"]
layout_mode = 2

[node name="VisualiserButton" type="Button" parent="VisualisationOptions"]
layout_mode = 2
size_flags_horizontal = 0
text = "Open Visualisation"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamA" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_rqy3e")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamB" parent="ScrollContainer/VBoxContainer" instance=ExtResource("1_rqy3e")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="TitleContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="name_changed" from="ScrollContainer/VBoxContainer/TeamA" to="." method="_on_team_name_changed"]
[connection signal="points_changed" from="ScrollContainer/VBoxContainer/TeamA" to="." method="_on_team_points_changed"]
[connection signal="name_changed" from="ScrollContainer/VBoxContainer/TeamB" to="." method="_on_team_name_changed"]
